--- a/index.html
+++ b/index.html
@@ -23,31 +23,31 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
                         <img src="https://bootstrapmade.com/demo/templates/DevFolio/assets/img/work-2.jpg" alt="">
-                        <p>Lorem ipsum dolor sit amet consectetur</p>
+                        <p class="p-5">Lorem hghjgjghjg ipsum dolor sit amet consectetur</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
                         <img src="https://bootstrapmade.com/demo/templates/DevFolio/assets/img/work-3.jpg" alt="">
-                        <p>Lorem ipsum dolor sit amet consectetur</p>
+                        <p class="p-5">Lorem ipsukjum jgjkjjj dolor sit amet consectetur </p>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
                         <img src="https://bootstrapmade.com/demo/templates/DevFolio/assets/img/work-4.jpg" alt="">
-                        <p>Lorem ipsum dolor sit amet consectetur</p>
+                        <p class="p-5">Lorem ipsum dolor sit amet consectetur</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
                         <img src="https://bootstrapmade.com/demo/templates/DevFolio/assets/img/work-5.jpg" alt="">
-                        <p>Lorem ipsum dolor sit amet consectetur</p>
+                        <p class="p-5">Lorem ipsum dolor sit amet consectetur</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
                         <img src="https://bootstrapmade.com/demo/templates/DevFolio/assets/img/work-6.jpg" alt="">
-                        <p>Lorem ipsum dolor sit amet consectetur</p>
+                        <p class="p-5">Lorem ipsum dolor sit amet consectetur</p>
                     </div>
                 </div>
                
