--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="card">
                         <img src="https://bootstrapmade.com/demo/templates/DevFolio/assets/img/work-1.jpg" alt="">
-                        <p>Lorem ipsum dolor sit amet consectetur</p>
+                        <p class="p-5">Lorem ipsum dolor sit amet consectetur</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
